Restrict legacy runCommand endpoint to authenticated allowlisted commands